# ft_linear_regression

./: .gitignore  README.md  ft_linear_regression.py  notes.txt  plot_fit.py  predict.py  pyproject.toml  requirements-dev.txt  requirements.txt  theta.json  train.py
linear_regression/: __init__.py  core.py
tests/: test_core.py
